# QuOCS-pyside2interface

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: unit_testing_macOS.yml  unit_testing_windows.yml
QuOCS_Results/20210514_173324_Optimization_dCRAB_Qubit/: best_controls.npz
quocs_pyqtinterface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quocs_pyqtinterface/gui/: OptimizationBasicGui.py  convertuipy.py
quocs_pyqtinterface/gui/algorithms/: GeneralOptimizationDialog.py
quocs_pyqtinterface/gui/freegradients/: GeneralSettingsNM.py  StoppingCriteriaNM.py
quocs_pyqtinterface/gui/settings/: AllInOneCommForm.py  CommunicationFoMSettings.py  FilesUpdateForm.py  GetFromFileFunction.py  LocalCommForm.py  NewPythonArgument.py  PythonClassForm.py  RemoteCommForm.py
quocs_pyqtinterface/gui/tools/: DropOutPlotter.py  DropOutSummary.py
quocs_pyqtinterface/gui/uiclasses/: AllInOneCommunicationUI.py  CommFomSettingsUI.py  ControlsTabUI.py  DropOutPlotterUI.py  DropOutSummaryUI.py  ExchangeCommunicationUI.py  FilesUpdateUI.py  FomQudiPluginUI.py  (+23 more)
quocs_pyqtinterface/logic/: HandleExitBasic.py  OptimizationBasic.py
quocs_pyside2interface/gui/: OptimizationBasicGui.py
quocs_pyside2interface/logic/: OptimizationBasic.py
quocspyside2interface/gui/: convertuipy.py
quocspyside2interface/logic/: HandleExitBasic.py
tests/: Functions.py  manual_test_guiv2.py  test_Functions.py  test_dcrab_optimization.json  test_guiv2.py  test_pure_parametrization.json
tests/Test_Folder/: test_sigmoid_1.json  test_sigmoid_2.json
(+298 files in other folders)
