[metadata]
name = quocs-pyside2interface
version = 0.0a1
author = QuOCS Team
author_email = quantum.optimal.cs@gmail.com
description = QuOCS-tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantum-OCS/QuOCS-pyside2interface
project_urls =
    Bug Tracker = https://github.com/Quantum-OCS/QuOCS-pyside2interface/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    QtPy
    numpy
    scipy
    pyqtgraph
    PySide2

[options.packages.find]
where=src
